UI improvements: grid layouts, lightbox, blog year grouping, logo visibility
- Travel portfolio: 3 images per row, load more after 5 rows (15 images)
- Home page: 3x3 grid for recent travels with view more button
- Home page: Added lightbox for image enlargement on click
- Blog page: Group articles by year with subheaders
- All pages: Logo now visible in sidebar and mobile header

--- a/static/blog.html
+++ b/static/blog.html
@@ -25,7 +25,10 @@
 
   <!-- Mobile Header -->
   <header class="mobile-header">
-    <a href="index.html" class="mobile-logo">VARUN AMIN</a>
+    <a href="index.html" class="mobile-logo">
+      <img src="images/logo.svg" alt="" class="mobile-logo-img">
+      VARUN AMIN
+    </a>
     <button type="button" class="menu-toggle" aria-expanded="false" aria-label="Toggle menu" onclick="toggleMenu()">
       <span></span><span></span><span></span>
     </button>
