--- a/static/travel.html
+++ b/static/travel.html
@@ -24,7 +24,10 @@
 
   <!-- Mobile Header -->
   <header class="mobile-header">
-    <a href="index.html" class="mobile-logo">VARUN AMIN</a>
+    <a href="index.html" class="mobile-logo">
+      <img src="images/logo.svg" alt="" class="mobile-logo-img">
+      VARUN AMIN
+    </a>
     <button type="button" class="menu-toggle" aria-expanded="false" aria-label="Toggle menu" onclick="toggleMenu()">
       <span></span><span></span><span></span>
     </button>
@@ -836,8 +839,8 @@
     const filterBtns = document.querySelectorAll('.filter-btn');
     const photos = document.querySelectorAll('.photo-card[data-location]');
     const photoCount = document.getElementById('photo-count');
-    const INITIAL_LOAD = 20;
-    const LOAD_MORE_COUNT = 20;
+    const INITIAL_LOAD = 15; // 5 rows x 3 columns
+    const LOAD_MORE_COUNT = 15; // Load 5 more rows at a time
     let currentFilter = 'all';
     let loadedCount = INITIAL_LOAD;
 
