Add Framer-style carousel, blog caching, favicon, and UI improvements
- Redesign photo carousel to Framer-style horizontal multi-image scroll
- Add hero subtitle: A consultant, writer and traveller, based in Sydney
- Implement localStorage caching for blog posts (30min expiry) for faster loads
- Add favicon using logo.svg across all pages
- Add logo to footer on all pages
- Increase nav font sizes (sidebar: 17px, mobile: 20px)

--- a/static/blog.html
+++ b/static/blog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog — Varun Amin</title>
+  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://aminmyhead.substack.com">
@@ -48,7 +49,7 @@
       <!-- Page Header -->
       <header class="page-header container">
         <p class="section-label">Blog</p>
-        <h1>BLOG</h1>
+        <h1>AMIN MY HEAD</h1>
         <p class="subtitle">Essays on productivity, technology, careers, and life. Subscribe on <a href="https://aminmyhead.substack.com/" target="_blank" rel="noopener">Substack</a>.</p>
       </header>
 
@@ -68,7 +69,10 @@
     <!-- Footer -->
     <footer class="site-footer">
       <div class="footer-inner">
-        <p class="footer-logo">VARUN AMIN</p>
+        <div class="footer-logo">
+          <img src="images/logo.svg" alt="" class="footer-logo-img">
+          <span>VARUN AMIN</span>
+        </div>
         <nav class="footer-nav">
           <a href="index.html">Home</a>
           <a href="about.html">About Me</a>
