--- a/static/travel.html
+++ b/static/travel.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Portfolio — Varun Amin</title>
+  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -795,7 +796,10 @@
     <!-- Footer -->
     <footer class="site-footer">
       <div class="footer-inner">
-        <p class="footer-logo">VARUN AMIN</p>
+        <div class="footer-logo">
+          <img src="images/logo.svg" alt="" class="footer-logo-img">
+          <span>VARUN AMIN</span>
+        </div>
         <nav class="footer-nav">
           <a href="index.html">Home</a>
           <a href="about.html">About Me</a>
