Fix footer logo size, mobile travel grid, remove carousel zoom
- Reduce footer logo from 28px to 20px to match nav proportions
- Show only 8 photos on mobile travel grid (4 rows × 2 columns)
- Remove zoom/scale effects from carousel for cleaner look
- Replace carousel images with more vertical/portrait-oriented photos

--- a/static/index.html
+++ b/static/index.html
@@ -60,28 +60,28 @@
           <button class="carousel-nav next" aria-label="Next slide">&#8250;</button>
           <div class="carousel-track" id="carousel-track">
             <div class="carousel-slide">
-              <img src="images/france/paris-2.jpeg" alt="Sunset at the Eiffel Tower" fetchpriority="high">
+              <img src="images/japan/kyoto2.jpeg" alt="Fushimi Inari Taisha" fetchpriority="high">
             </div>
             <div class="carousel-slide">
-              <img src="images/usa/newyork2.jpeg" alt="Manhattan Bridge from Dumbo" loading="lazy">
-            </div>
-            <div class="carousel-slide">
-              <img src="images/iceland/jökulsárlón (1).jpeg" alt="Jökulsárlón glacial lagoon" loading="lazy">
+              <img src="images/iceland/skógafoss.jpeg" alt="Skógafoss Waterfall" loading="lazy">
             </div>
             <div class="carousel-slide">
               <img src="images/indonesia/kelingking-beach.jpeg" alt="Kelingking Beach" loading="lazy">
             </div>
             <div class="carousel-slide">
-              <img src="images/italy/venice-1.jpg" alt="Gondolas in Venice" loading="lazy">
+              <img src="images/japan/tokyo-international-forum.jpeg" alt="Tokyo International Forum" loading="lazy">
             </div>
             <div class="carousel-slide">
-              <img src="images/japan/kyoto2.jpeg" alt="Fushimi Inari Taisha" loading="lazy">
+              <img src="images/vietnam/hoi-an.jpeg" alt="Hoi An Lanterns" loading="lazy">
             </div>
             <div class="carousel-slide">
-              <img src="images/uk/london.jpeg" alt="Tower Bridge London" loading="lazy">
+              <img src="images/iceland/seljalandsfoss.jpeg" alt="Seljalandsfoss Waterfall" loading="lazy">
             </div>
             <div class="carousel-slide">
-              <img src="images/singapore/singapore-2.jpeg" alt="Singapore Skyline" loading="lazy">
+              <img src="images/japan/sensō-ji.jpeg" alt="Sensō-ji Temple" loading="lazy">
+            </div>
+            <div class="carousel-slide">
+              <img src="images/thailand/phi-phi-islands.jpeg" alt="Phi Phi Islands" loading="lazy">
             </div>
           </div>
         </div>
